# acad2

./: .gitignore  makefile  pyproject.toml  setup.py  setup_old.py
Examples/: AddLine.py  copy_objects.py
acad/: #acad.py#  acad.py  add_dimstyle.py  block.py  bricscad_test.py  dimstyle.org  document.py  p_add_dimstyle  p_add_dimstyle.py  plot.py  rename.py  set_layers.lsp  test_brics.py
autolisp/: 2dgear.dcl  2dgear.lsp  add_dim.lsp  adddim.lsp  buffer_data.csv  change_objects.lsp  colors.lsp  comserver.lsp  create_block.lsp  datatext.lsp  fileutils.lsp  log.lsp  merge.lsp  mytoggles.dcl  mytoggles.lsp  on_doc_load.lsp  parametric.lisp  parametric.lsp  plot.lsp  python.lsp  read_mesh.lsp  setlayers.lsp  test_table.csv  test_table.org  text.lsp  textstyles.lsp
comserver/: comserver.py  comserver2.py  comserver4.py  makefile  test_com.py  test_comserver4.py
comserver/test_com/: Class1.cs  Mesh.cs  bricscad_api.cs  mykey.snk  test_com.csproj  test_com.sln
comserver/test_com/Properties/: AssemblyInfo.cs
cpp/: bricscad_line.cpp  dxf2geo.cpp  makefile
netcad/: model.py  netsolid.py  runthem.py
netcad/plainc/: bricscad_plain.c
netcad/tests/: test-run.py  test_add.py  test_document.py
netcad/vstudio/ClassLibrary2/: Class1.cs  Class1.cs~  ClassLibrary2.csproj  ClassLibrary2.sln
netcad/vstudio/brics_sharp/: Brics_Sharp.cs  Brics_Sharp.csproj  brics_sharp.sln
netcad/vstudio/csharp-app/: Program.cs  Program.cs~  csharp-app.csproj  csharp-app.sln
scripts/: backup_file.py  emacs.el  rename_prn.py  rename_prn2.py  send_plot_command.py
(+2 files in other folders)
