[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acad"
version = "0.1.3"
description = "communicate with acad"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["acad*"]
